--- a/Interactive-resume-builder/01-02 Milestone/index.html
+++ b/Interactive-resume-builder/01-02 Milestone/index.html
@@ -31,32 +31,30 @@
         <section id="display-education">
             <h2>Education <button class="toggle-btn" id="toggle-education">-</button></h2>
             <ul id="educationList">
-                <li>dgg</li>
-                <li>dgg</li>
-                <li>dgg</li>
-                <li>dgg</li>
-                <li>dgg</li>
+                <li>Currently enorlled in GIAIC initiative (2nd Quarter), Governor House</li>
+                <li>BSCS in Computer Science, Virtual University</li>
+                <li>FSC in PRe-Enginnering, Islamia College</li>
+                <li>Optometry, Pakistan Optician Academy</li>
+               
             </ul>
         </section>
 
         <section id="display-skills">
             <h2>Skills <button class="toggle-btn" id="toggle-skills">-</button></h2>
             <ul id="skillsList">
-                <li>fdfdf</li>
-                <li>fdfdf</li>
-                <li>fdfdf</li>
-                <li>fdfdf</li>
-                <li>fdfdf</li>
+                <li>HTML, CSS, Typescript</li>
+                <li>Next.js, React</li>
+                <li>Video Editing</li>
+                <li>AI Media Content Creation</li>
             </ul>
         </section>
 
         <section id="display-experience">
             <h2>Work Experience <button class="toggle-btn" id="toggle-work">-</button></h2>
             <ul id="workList">
-                <li>fdfdfdf</li>
-                <li>fdfdfdf</li>
-                <li>fdfdfdf</li>
-                <li>fdfdfdf</li>
+                <li>Worked as Freelancer on Fiver as AI Media Content Creator</li>
+                <li>Woked in Medical Record Room, Zaiuddin Hospital Clifton </li>
+                <li>Worked as a Video Editor Privately</li>
             </ul>
         </section>
     </div>
