--- a/Interactive-resume-builder/01-02 Milestone/index.html
+++ b/Interactive-resume-builder/01-02 Milestone/index.html
@@ -33,7 +33,7 @@
             <ul id="educationList">
                 <li>Currently enorlled in GIAIC initiative (2nd Quarter), Governor House</li>
                 <li>BSCS in Computer Science, Virtual University</li>
-                <li>FSC in PRe-Enginnering, Islamia College</li>
+                <li>FSC in Pre-Enginnering, Islamia College</li>
                 <li>Optometry, Pakistan Optician Academy</li>
                
             </ul>
