--- a/Interactive-resume-builder/04 MileStone/index.html
+++ b/Interactive-resume-builder/04 MileStone/index.html
@@ -51,7 +51,7 @@
     <!-- Existing Resume -->
     <div class="container" id="resume" style="display:none;">
         <header>
-            <img id="display-photo" alt="Your Photo">
+            <img id="display-photo" alt="">
         </header>
 
         <section id="personal-info">
